2005-10-11  Richard Hult  <richard@imendio.com>

	Reviewed by Edward Hervey  <edward@fluendo.com>

	* gst/gst.defs:
	* gst/gst.override: (_wrap_gst_tag_list_get):
	couple of memleak fixes
	Closes #171287

2005-10-11  Michael Scherer <misc@mandriva.org>

	Reviewed by Edward Hervey  <edward@fluendo.com>

	* gst/extend/Makefile.am: (pygst_PYTHON): 
	jukebox.py and utils.py are now properly packaged

2005-09-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/gst.defs:
	* gst/gst.override:
	* testsuite/test_element.py:
	  add debug methods to GstObject

2005-09-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/__init__.py:
	  make sure play works uninstalled as well; helps running a single
	  testsuite app

2005-09-02  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/__init__.py:
	  fix make distcheck
	* gst/extend/jukebox.py:
	* gst/extend/utils.py:
	  add some more stuff for GC debugging

2005-08-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/extend/leveller.py:
	  catch ZeroDivisionError

2005-08-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/extend/jukebox.py:
	* gst/extend/leveller.py:
	* gst/extend/sources.py:
	  add an explicit .clean() method to source and leveller, to make
	  sure all our elements are cleaned up correctly.  Should help
	  for long-living processes.
	* gst/extend/utils.py:
	  add a gc_collect method that will explicitly garbage-collect
	  if env var GST_GC is set.  Useful for debugging refcounting.

2005-08-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/extend/jukebox.py:
	  clean up leveller and remove sources from jukebox

2005-08-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/extend/leveller.py:
	  add a .stop method to free resources by setting pipe to NULL

2005-08-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/__init__.py:
	  if using ltihooks, import interfaces and then uninstall our