@@ -215,13 +215,15 @@ _pygst_element_init (gpointer gclass, PyTypeObject *pyclass)
 #endif
 
 static PyObject *
-pygst_debug_log (PyObject *whatever, PyObject *string, GstDebugLevel level)
+pygst_debug_log (PyObject *pyobject, PyObject *string, GstDebugLevel level,
+    gboolean isgstobject)
 {
     gchar	*str;
     gchar	*function;
     gchar	*filename;
     int		lineno;
     PyFrameObject	*frame;
+    GObject   *object = NULL;
 
     if (!PyArg_ParseTuple(string, "s:gst.debug_log", &str)) {
 	PyErr_SetString(PyExc_TypeError, "Need a string!");
@@ -233,7 +235,9 @@ pygst_debug_log (PyObject *whatever, PyObject *string, GstDebugLevel level)
     filename = g_path_get_basename(PyString_AsString(frame->f_code->co_filename));
     lineno = frame->f_code->co_firstlineno;
     /* gst_debug_log : category, level, file, function, line, object, format, va_list */
-    gst_debug_log (GST_CAT_DEFAULT, level, filename, function, lineno, NULL, "%s", str);
+    if (isgstobject)
+      object = G_OBJECT (pygobject_get (pyobject));
+    gst_debug_log (GST_CAT_DEFAULT, level, filename, function, lineno, object, "%s", str);
     if (filename)
 	g_free(filename);
     Py_INCREF (Py_None);
@@ -1078,21 +1082,21 @@ override gst_log args
 static PyObject *
 _wrap_gst_log (PyObject *whatever, PyObject *string)
 {
-    return pygst_debug_log (whatever, string, GST_LEVEL_LOG);
+    return pygst_debug_log (whatever, string, GST_LEVEL_LOG, FALSE);
 }
 %%
 override gst_debug args
 static PyObject *
 _wrap_gst_debug (PyObject *whatever, PyObject *string)
 {
-    return pygst_debug_log (whatever, string, GST_LEVEL_DEBUG);
+    return pygst_debug_log (whatever, string, GST_LEVEL_DEBUG, FALSE);
 }
 %%
 override gst_info args
 static PyObject *
 _wrap_gst_info (PyObject *whatever, PyObject *string)
 {
-    return pygst_debug_log (whatever, string, GST_LEVEL_INFO);
+    return pygst_debug_log (whatever, string, GST_LEVEL_INFO, FALSE);
 }
 %%
 %%
@@ -1100,14 +1104,14 @@ override gst_warning args
 static PyObject *
 _wrap_gst_warning (PyObject *whatever, PyObject *string)
 {
-    return pygst_debug_log (whatever, string, GST_LEVEL_WARNING);
+    return pygst_debug_log (whatever, string, GST_LEVEL_WARNING, FALSE);
 }
 %%
 override gst_error args
 static PyObject *
 _wrap_gst_error (PyObject *whatever, PyObject *string)
 {
-    return pygst_debug_log (whatever, string, GST_LEVEL_ERROR);
+    return pygst_debug_log (whatever, string, GST_LEVEL_ERROR, FALSE);
 }
 
 %%
@@ -1115,33 +1119,33 @@ override gst_object_log args
 static PyObject *
 _wrap_gst_object_log (PyObject *whatever, PyObject *string)
 {
-    return pygst_debug_log (whatever, string, GST_LEVEL_LOG);
+    return pygst_debug_log (whatever, string, GST_LEVEL_LOG, TRUE);
 }
 %%
 override gst_object_debug args
 static PyObject *
 _wrap_gst_object_debug (PyObject *whatever, PyObject *string)
 {
-    return pygst_debug_log (whatever, string, GST_LEVEL_DEBUG);
+    return pygst_debug_log (whatever, string, GST_LEVEL_DEBUG, TRUE);
 }
 %%
 override gst_object_info args
 static PyObject *
 _wrap_gst_object_info (PyObject *whatever, PyObject *string)
 {
-    return pygst_debug_log (whatever, string, GST_LEVEL_INFO);
+    return pygst_debug_log (whatever, string, GST_LEVEL_INFO, TRUE);
 }
 %%
 override gst_object_warning args
 static PyObject *
 _wrap_gst_object_warning (PyObject *whatever, PyObject *string)
 {
-    return pygst_debug_log (whatever, string, GST_LEVEL_WARNING);
+    return pygst_debug_log (whatever, string, GST_LEVEL_WARNING, TRUE);
 }
 %%
 override gst_object_error args
 static PyObject *
 _wrap_gst_object_error (PyObject *whatever, PyObject *string)
 {
-    return pygst_debug_log (whatever, string, GST_LEVEL_ERROR);
+    return pygst_debug_log (whatever, string, GST_LEVEL_ERROR, TRUE);
 }
